[package]
name = "rs_poker"
version = "2.0.0-alpha.0"
authors = ["Charlie Koudsi <ckoudsi@uchicago.edu>"]
repository = "https://github.com/charliekoudsi/rs-poker"
description = "A library to help with any Rust code dealing with poker. This includes card values, suits, hands, hand ranks, 5 card hand strength calculation, 7 card hand strength calulcation, and monte carlo game simulation helpers."
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
rand = "0.7.3"
fixedbitset = "0.3.1"


[profile.release]
debug = true
lto = true
